<?xml version="1.0"?>
<package format="3">
  <name>launch_only</name>
  <version>0.1.0</version>
  <description>The launch_only package</description>

  <maintainer email="123@456.com">root</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
